# leader

./: .gitignore  LICENSE  README.md
human_leader/: CMakeLists.txt  manifest.xml  predict.cpp  samples.csv  test.yaml
human_leader/conf/: follow_leader.rviz  ua_nav.rviz
human_leader/launch/: amcl.launch  amcl_old.launch  follow_leader_ua.launch  hector_slam.launch  process_bag.launch  process_stage.launch  sim_nav_ua.launch  test_iser.launch  test_iser_amcl.launch
human_leader/matlab/: do_set.m  enhance_features.m  evaluate_model.m  new_features.m  new_features_odnm.m  test_mean.m  train_adaboost.m  view_features.m
human_leader/move_base_config/: common.yaml  local.yaml  planner.yaml
human_leader/msg/: TrajectoryObservation.msg
human_leader/src/: adaboost.cpp  bag_filter.cpp  classify_features.cpp  extract_features.cpp  extract_features_legacy.cpp  leader_follower.cpp  leader_follower.h  leader_follower_class.cpp  leader_follower_class.h
human_leader/test/: tag_evaluation.ods  tests_errors.ods
human_leader/test/mat/: adaboost_models.mat  ann_models.mat  complete_vars_improved.mat  merged_tags_situations.mat  new_features.mat  new_situations_improved.mat  test_vars.mat  test_vars_cutted.mat  vars_description.txt
human_leader/test/txt/: description-rich.txt  description.txt  log01-90.txt  log02-27.txt  log03-25.txt  log04-0,4.txt  (+41 more)
mtt/: CMakeLists.txt  mainpage.dox  manifest.xml
mtt/include/mtt/: colormap.h  mtt.h  mtt_association.h  mtt_auxiliar.h  mtt_clustering.h  mtt_common.h  mtt_kalman.h
mtt/launch/: generate_planar_pc_from_laser_atlasmv.launch  mtt_new_msg.launch
mtt/msg/: Target.msg
mtt/rvizconfig/: log_demo_lasers.vcg  test_atlasmv_data.rviz  test_atlasmv_data.vcg
mtt/src/: colormap.cpp  mtt_association.cpp  mtt_auxiliar.cpp  mtt_clustering.cpp  mtt_kalman.cpp  mtt_new_msg.cpp  simple_planar_pc_generator_atlasmv.cpp
people/: .gitignore
people/leg_detector/: CMakeLists.txt  manifest.xml
people/people_tracking_filter/: manifest.xml
people/people_velocity_tracker/: manifest.xml
people/social_navigation_layers/: CMakeLists.txt  costmap_plugins.xml  manifest.xml
(+91 files in other folders)
